--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             margin: 0 auto;
             filter: drop-shadow(0 0 10px var(--accent));
             transition: transform 0.5s ease;
-            content: url('https://i.imgur.com/logo.png');
+            content: url('');
         }
         
         .logo:hover {
