--- a/index.html
+++ b/index.html
@@ -504,9 +504,9 @@
     <script>
         // Configuration object for easy link management
         const downloadLinks = {
-            adventureLand: "https://www.minecraft3ds.org/",
-            skyblock: "https://www.minecraft3ds.org/",
-            pvpArena: "https://www.minecraft3ds.org/"
+            adventureLand: "https://sites.google.com/view/3ds-maps/spleef-remasterd",
+            skyblock: "https://sites.google.com/view/3ds-maps/minecraft-3ds-battle-royale?authuser=0",
+            pvpArena: "https://sites.google.com/view/3ds-maps/hide-and-seek?authuser=0"
         };
 
         function showMapsPage() {
