--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 </div>
                 
                 <!-- Community Button -->
-                <div class="action-button community-btn" onclick="window.open('https://minecraft3ds.com', '_blank')">
+                <div class="action-button community-btn" onclick="window.open('https://www.minecraft3ds.org/', '_blank')">
                     <img src="https://i.imgur.com/community-icon.png" alt="Community">
                     <h2>3DS COMMUNITY</h2>
                 </div>
