--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             color: white;
             overflow-x: hidden;
             /* BACKGROUND IMAGE - REPLACE WITH YOUR IMAGE URL */
-            background-image: url('https://live.staticflickr.com/65535/54517973121_d4dabb5af0_w.jpg');
+            background-image: url('Screenshot 2025-05-15 9.32.57 AM.png');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
