--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             color: white;
             overflow-x: hidden;
             /* BACKGROUND IMAGE - REPLACE WITH YOUR IMAGE URL */
-            background-image: url('Screenshot 2025-05-15 9.32.57 AM.png');
+            background-image: url('Images/Dirt_background_BE1.webp');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
@@ -392,7 +392,7 @@
     <div class="container">
         <header>
             <!-- REMOVED SITE LOGO AND ONLY KEPT MINECRAFT TITLE -->
-            <img src="https://live.staticflickr.com/65535/54518324675_e9ed285380_c.jpg" alt="Minecraft" class="minecraft-title">
+            <img src="Images/New_Nintendo_3DS_Edition.png" alt="Minecraft" class="minecraft-title">
         </header>
         
         <div class="main-content">
@@ -442,7 +442,7 @@
                     
                     <div class="map-screenshots">
                         <!-- MAP 1 SCREENSHOTS -->
-                        <img src="https://live.staticflickr.com/65535/54517960071_7bb00905d2_w.jpg" class="map-screenshot">
+                        <img src="Images/442992092-11aefed8-38e8-40fd-8d15-e5eed4294e61 (2).png" class="map-screenshot">
                         <img src="https://live.staticflickr.com/65535/54517101432_3dd612b18e_w.jpg" class="map-screenshot">
                         <img src="https://live.staticflickr.com/65535/54517962841_7ec15d7f99_w.jpg" alt="Screenshot 3" class="map-screenshot">
                     </div>
