--- a/index.html
+++ b/index.html
@@ -436,15 +436,15 @@
                 <div class="map-card">
                     <div class="map-header">
                         <!-- MAP 1 LOGO -->
-                        <img src="https://live.staticflickr.com/65535/54518328430_e9b32a7155.jpg" alt="Map 1 Logo" class="map-logo">
+                        <img src="Images/443411326-563c86d0-3e0c-4019-b060-b52874a627bf.png" alt="Map 1 Logo" class="map-logo">
                         <h3 class="map-title">Spleef Remasterd Credit: UniGaam</h3>
                     </div>
                     
                     <div class="map-screenshots">
                         <!-- MAP 1 SCREENSHOTS -->
                         <img src="Images/442992092-11aefed8-38e8-40fd-8d15-e5eed4294e61 (2).png" class="map-screenshot">
-                        <img src="https://live.staticflickr.com/65535/54517101432_3dd612b18e_w.jpg" class="map-screenshot">
-                        <img src="https://live.staticflickr.com/65535/54517962841_7ec15d7f99_w.jpg" alt="Screenshot 3" class="map-screenshot">
+                        <img src="Images/442992090-977aa36f-4952-4d5c-bca0-7c6031e58895 (1).png" class="map-screenshot">
+                        <img src="Images/442992091-f4dd97a6-7e64-441a-b07b-da124475586a (1).png" alt="Screenshot 3" class="map-screenshot">
                     </div>
                     
                     <p class="map-description">
