--- a/index.html
+++ b/index.html
@@ -399,19 +399,19 @@
             <div class="buttons-grid">
                 <!-- Discord Button -->
                 <div class="action-button discord-btn" onclick="window.open('https://discord.gg/yourlink', '_blank')">
-                    <img src="https://i.imgur.com/discord-icon.png" alt="Discord">
+                    <img src="Images/Screenshot 2025-05-15 10.17.05 AM.png" alt="Discord">
                     <h2>JOIN OUR DISCORD</h2>
                 </div>
                 
                 <!-- Maps Button -->
                 <div class="action-button maps-btn" onclick="showMapsPage()">
-                    <img src="https://i.imgur.com/maps-icon.png" alt="Maps">
+                    <img src="Images/Map_Zoom_4.webp" alt="Maps">
                     <h2>DOWNLOAD MAPS</h2>
                 </div>
                 
                 <!-- Community Button -->
                 <div class="action-button community-btn" onclick="window.open('https://www.minecraft3ds.org/', '_blank')">
-                    <img src="https://i.imgur.com/community-icon.png" alt="Community">
+                    <img src="Images/Screenshot 2025-05-15 10.19.43 AM.png" alt="Community">
                     <h2>3DS COMMUNITY</h2>
                 </div>
             </div>
