--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             color: white;
             overflow-x: hidden;
             /* BACKGROUND IMAGE - REPLACE WITH YOUR IMAGE URL */
-            background-image: url('Images/Dirt_background_BE1.webp');
+            background-image: url('Images/3d01bcf141a7fd14195660ab06b9f5de.jpg');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
