--- a/index.html
+++ b/index.html
@@ -502,14 +502,14 @@
                 <div class="map-card">
                     <div class="map-header">
                         <!-- MAP 4 LOGO - Replace with your image -->
-                        <img src="Images/your-map4-logo.png" alt="Map 4 Logo" class="map-logo">
+                        <img src="Images/2011-01-01_12-48-34.418_top (1).png" alt="Map 4 Logo" class="map-logo">
                         <h3 class="map-title">C-PVP 3DS Credit: Unagaam</h3>
                     </div>
                     
                     <div class="map-screenshots">
                         <!-- MAP 4 SCREENSHOTS - Replace with your images -->
                         <img src="Images/2011-01-01_12-48-34.418_top.png" alt="Screenshot 1" class="map-screenshot">
-                        <img src="Images/2011-01-01_12-48-30.152_bot.png" alt="Screenshot 2" class="map-screenshot">
+                        <img src="Images/2011-01-01_12-48-30.152_bot (1).png" alt="Screenshot 2" class="map-screenshot">
                         <img src="Images/2011-01-01_12-49-24.112_top.png" alt="Screenshot 3" class="map-screenshot">
                     </div>
                     
