--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             color: white;
             overflow-x: hidden;
             /* BACKGROUND IMAGE - REPLACE WITH YOUR IMAGE URL */
-            background-image: url('Images/3d01bcf141a7fd14195660ab06b9f5de.jpg');
+            background-image: url('Images/Untitled design (1).png');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
@@ -392,7 +392,7 @@
     <div class="container">
         <header>
             <!-- REMOVED SITE LOGO AND ONLY KEPT MINECRAFT TITLE -->
-            <img src="Images/New_Nintendo_3DS_Edition.png" alt="Minecraft" class="minecraft-title">
+            <img src="Images/minecraft_title (1).png" alt="Minecraft" class="minecraft-title">
         </header>
         
         <div class="main-content">
