--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             color: white;
             overflow-x: hidden;
             /* BACKGROUND IMAGE - REPLACE WITH YOUR IMAGE URL */
-            background-image: url('Images/Untitled design (3).png');
+            background-image: url('Images/New thubnail.png');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
