--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="Images/minecraft_title (3).png" alt="Minecraft" class="minecraft-title">
+            <img src="Images/ff0e2473ec26ce92d445dc77307cbb49.png" alt="Minecraft" class="minecraft-title">
         </header>
         
         <div class="main-content">
