--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
         <div class="main-content">
             <div class="buttons-grid">
                 <!-- Discord Button -->
-                <div class="action-button discord-btn" onclick="window.open('https://discord.gg/yourlink', '_blank')">
+                <div class="action-button discord-btn" onclick="window.open('https://discord.gg/XqpyZZArNv', '_blank')">
                     <img src="Images/discord.png" alt="Discord">
                     <h2>JOIN OUR DISCORD</h2>
                 </div>
